<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fut5</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="settings_preferences">Booking Settings</string>
    <string name="action_my_bookings">My Bookings</string>
    <string name="action_bookings">Bookings</string>
    <string name="register">Register</string>
    <string name="register_success_message">Registration Complete!</string>
    <string name="booking_info">Booking Info</string>
    <string name="logout">Log out</string>
    <string name="knockout_list">Knockout List</string>
    <string name="join_knockout_list">Join The Knockout List</string>
    <string name="ok_label">OK</string>
    <string name="cancel_label">Cancel</string>
    <string name="hint_number_of_guests">Enter number of guest here</string>
    <string name="knockout_game_time">Game Time</string>
    <string name="knockout_players_confirmed">Players Confirmed</string>
    <string name="join_the_list_button_text">Join The List</string>
    <string name="login">Log In</string>
    <string name="logout_message">Logging out...</string>
    <string name="create_account_btn_txt">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email_address">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="booking">Booking</string>
    <string name="available_times">Available Times</string>
    <string name="url_login">http://</string>
    <string name="url_register">http://</string>
    <string name="no_bookings">You don\'t have any bookings at this time!</string>
    <string name="booking_select_duration">Select Duration of Booking</string>
    <string-array name="booking_times">
        <item>1 Hour</item>
        <item>2 Hours</item>
    </string-array>
    <string name="unable_to_book_message">Unable to book the selected time!</string>
    <string name="press_ok_message">Press OK to Confirm</string>
    <string name="booking_field_names">Soccer Fields</string>
    <string name="select_field">Select Soccer Field</string>
    <string-array name="soccer_fields">
        <item>Soccer Field 1</item>
        <item>Soccer Field 2</item>
        <item>Soccer Field 3</item>
    </string-array>
    <string-array name="dummy_players">
        <item>John Doe</item>
        <item>Beckam</item>
        <item>Teo</item>
    </string-array>

</resources>
