<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fut5.MainActivity" >

    <item 
        android:id="@+id/bookings" 
        android:orderInCategory="1" 
        android:title="@string/booking" 
        app:showAsAction="never"/>
    <item 
        android:id="@+id/knockout" 
        android:orderInCategory="5" 
        android:title="@string/knockout_list" 
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="50"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item 
        android:id="@+id/logout" 
        android:orderInCategory="100" 
        android:title="@string/logout" 
        app:showAsAction="never"/>
    <item 
        android:id="@+id/my_bookings"
        android:orderInCategory="10"
        android:title="@string/action_my_bookings"
        android:icon="@drawable/action_icon_my_bookings"
        app:showAsAction="ifRoom" />
    
</menu>
